--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,9 @@ header a{
     background-size: cover;
     padding-top: 4rem;
     padding-bottom: 2rem;
-    padding-left: 1rem;
+    padding-left: 0;
+    padding-right: 0;
+    box-sizing: border-box;
 }
 
 #intro-grid{
